Fix sidebar truncation issue in firefox

--- a/components/view/index.css
+++ b/components/view/index.css
@@ -119,6 +119,10 @@
     padding-left: 2rem;
     border-left: 1px solid rgb(var(--color-gray-light));
   }
+
+  .View-sidebar > * {
+    width: 100%;
+  }
 }
 
 @media (min-width: 1200px) {
